update index.html and aboutme.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Hello I'm Danhua</title>
+	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width initial-scale=1">
+	<link rel="icon" href="favicon.png"/>
+	<link href="https://fonts.googleapis.com/css?family=Bitter|Lobster|Roboto" rel="stylesheet"> 
+	<link rel="stylesheet" type="text/css" href="style/pagebase.css"/>
+	<link rel="stylesheet" type="text/css" href="style/main.css"/>
+</head>
+<body>
+	<div class='navbar'>
+		<a href="index.html">Hi</a>
+		<a href="aboutme.html">About Me</a>
+		<a href="work.html">Resume</a>
+	</div>
+	<div class="info">
+		<h1 class="name">Danhua Cai</h1>
+		<h5 class="job">
+			Teaching Assistant @ <a href="https://www.utsc.utoronto.ca/home/" target="_blank">University of Toronto Scarborough</a>
+		</h5>
+		<h5 class="job">
+			Pursuing for Graduate Study
+		</h5>
+		<div class="links">
+			<a class="icon github" href="https://github.com/danhuacai"></a>
+			<a class="icon linkedin" href="https://www.linkedin.com/in/danhua-cai/"></a>
+			<a class="icon email" href="mailto: danhuacai123@gmail.com"></a>
+		</div>
+	</div>
+	
+</body>
+</html>
