--- a/aboutme.html
+++ b/aboutme.html
@@ -23,7 +23,7 @@
 			Research Interest:  Data Science, 
 			<a href="https://en.wikipedia.org/wiki/Causal_inference/" target="_blank">Causal Inference</a>, 
 			<a href="https://en.wikipedia.org/wiki/Neural_tangent_kernel/" target="_blank">Neural Tangent Kernel</a>, Machine Learning, Statistics, 
-			<a href="https://en.wikipedia.org/wiki/Neuro-linguistic_programming" target="_blank">NLP</a>, Deep Learning
+			<a href="https://en.wikipedia.org/wiki/Neuro-linguistic_programming" target="_blank">NLP</a>
 		 </div>
 		<div class="infopiece">
 			Language: Python, SQL, Java, R, Bash, Javascript, MatLab, C, CSS, Latex
@@ -39,13 +39,13 @@
 		<div class="infopiece">
 			Open source contributor for 
 			<a href="http://mediacat.utsc.utoronto.ca" target="_blank">MediaCAT</a>, 
-			a web-based application, with a curated search engine.
+			a web-based application, with a curated search engine
 		</div>
 		<div class="infopiece">
-			UTSC Senior-Fund Scholarship 2017-2018, 2018-2019 and 2019- 2020;
+			UTSC Senior-Fund Scholarship 2017-2018, 2018-2019 and 2019- 2020
 		</div>
         <div class="infopiece">
-            E-Fund Scholarship 2017-2020; University of Toronto Scarborough Dean's List 2017, 2018,2019 and 2020.
+            E-Fund Scholarship 2017-2020; University of Toronto Scarborough Dean's List 2017, 2018,2019 and 2020
         </div>
 	</div>
 </body>
