--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@
 	<div class='navbar'>
 		<a href="index.html">Hi</a>
 		<a href="aboutme.html">About Me</a>
-		<a href="work.html">Resume</a>
+		<a href="danhua_CV.pdf">Resume</a>
 	</div>
 	<div class="info">
 		<div class="infopiece">Final-year computer science(Co-op) and Statistics student at the
